fixed overflow

--- a/src/Styles/Home.css
+++ b/src/Styles/Home.css
@@ -1,13 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:400,400i,600,600i');
-html,body{
-  margin:0;
-  height:120%;
-  font-family: 'Josefin Sans', sans-serif;
 
-}
-body.home-page {
-  overflow:scroll;
-}
 a{
   text-decoration:none
 }
